--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,17 @@
 		    <version>8.0.28</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency> 
+		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
 		
 	</dependencies>
 
